--- a/src/SyncMe/SyncMe.Lib/Views/EventSchedulePage.xaml
+++ b/src/SyncMe/SyncMe.Lib/Views/EventSchedulePage.xaml
@@ -4,16 +4,30 @@
              xmlns:local="clr-namespace:SyncMe.Lib.Controls"
              xmlns:x1="clr-namespace:SyncMe.Models;assembly=SyncMe.Common"
              x:Class="SyncMe.Views.EventSchedulePage"
-             Title="Event Schedule">
+             Title="Event Schedule"
+             BackgroundColor="{StaticResource syncBlack}">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style x:Key="ButtonStyle" TargetType="Button">
+                <Setter Property="FontSize" Value="Micro"/>
+                <Setter Property="WidthRequest" Value="90"/>
+                <Setter Property="HeightRequest" Value="40"/>
+                <Setter Property="BackgroundColor" Value="{StaticResource syncBlue}"/>
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="TextColor" Value="{StaticResource syncBlack}"/>
+                <Setter Property="Margin" Value="0,10"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Does not repeat" Clicked="OnClicked" Tag="None"/>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Every minute" Clicked="OnClicked" Tag="EveryMinute"/>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Every day" Clicked="OnClicked" Tag="Dayly"/>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Work days" Clicked="OnClicked" Tag="WorkDays"/>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Every week" Clicked="OnClicked" Tag="EveryWeek"/>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Every month" Clicked="OnClicked" Tag="EveryMonth"/>
-            <local:TagButton x:TypeArguments="x1:SyncRepeat" Text="Every year" Clicked="OnClicked" Tag="EveryYear"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Does not repeat" Clicked="OnClicked" Tag="None"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Every minute" Clicked="OnClicked" Tag="EveryMinute"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Every day" Clicked="OnClicked" Tag="Dayly"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Work days" Clicked="OnClicked" Tag="WorkDays"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Every week" Clicked="OnClicked" Tag="EveryWeek"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Every month" Clicked="OnClicked" Tag="EveryMonth"/>
+            <local:TagButton x:TypeArguments="x1:SyncRepeat" Style="{StaticResource ButtonStyle}" Text="Every year" Clicked="OnClicked" Tag="EveryYear"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
