#66: updated colors and fixed misprint

--- a/src/SyncMe/SyncMe.Lib/App.xaml
+++ b/src/SyncMe/SyncMe.Lib/App.xaml
@@ -6,10 +6,10 @@
         <ResourceDictionary>
             <Color x:Key="epamBlue">#39c2d7</Color>
             <Color x:Key="epamGrey">#424242</Color>
-            
-            <Color x:Key="syncBlue">#39c2d7</Color>
+
+            <Color x:Key="syncBlue">#50d3f4</Color>
             <Color x:Key="syncWhite">#FFFFFF</Color>
-            <Color x:Key="syncGrey">#757575</Color>
+            <Color x:Key="syncGray">#757575</Color>
             <Color x:Key="syncBlack">#000000</Color>
         </ResourceDictionary>
         <Style x:Key="ToggleButtonStyle" TargetType="Switch">
