--- a/src/SyncMe/SyncMe.Lib/Views/CreateEventPage.xaml
+++ b/src/SyncMe/SyncMe.Lib/Views/CreateEventPage.xaml
@@ -13,7 +13,7 @@
             </Style>
             <Style x:Key="ButtonStyle" TargetType="Button">
                 <Setter Property="Margin" Value="5,0,5,0"/>
-                <Setter Property="BackgroundColor" Value="{StaticResource epamBlue}"/>
+                <Setter Property="BackgroundColor" Value="{StaticResource syncBlue}"/>
             </Style>
             <Style x:Key="FrameStyle" TargetType="Frame">
                 <Setter Property="CornerRadius" Value="10"/>
@@ -36,8 +36,8 @@
                         <forms:AutoSuggestBox PlaceholderText="Namespace" TextChanged="OnTextChanged" SuggestionChosen="OnSuggestionChosen" Margin="5,0,5,0" TextColor="{StaticResource syncBlue}">
                             <forms:AutoSuggestBox.PlaceholderTextColor>
                                 <OnPlatform x:TypeArguments="Color">
-                                    <On Platform="iOS" Value="{StaticResource syncGrey}"></On>
-                                    <On Platform="Android" Value="{StaticResource syncGrey}"></On>
+                                    <On Platform="iOS" Value="{StaticResource syncGray}"></On>
+                                    <On Platform="Android" Value="{StaticResource syncGray}"></On>
                                 </OnPlatform>
                             </forms:AutoSuggestBox.PlaceholderTextColor>
                         </forms:AutoSuggestBox>
@@ -46,8 +46,8 @@
                         <Entry Text="{Binding Title}" Placeholder="Title" Margin="5,0,5,0" TextColor="{StaticResource syncBlue}">
                             <Entry.PlaceholderColor>
                                 <OnPlatform x:TypeArguments="Color">
-                                    <On Platform="iOS" Value="{StaticResource syncGrey}"></On>
-                                    <On Platform="Android" Value="{StaticResource syncGrey}"></On>
+                                    <On Platform="iOS" Value="{StaticResource syncGray}"></On>
+                                    <On Platform="Android" Value="{StaticResource syncGray}"></On>
                                 </OnPlatform>
                             </Entry.PlaceholderColor>
                         </Entry>
