--- a/src/SyncMe/SyncMe.Lib/App.xaml
+++ b/src/SyncMe/SyncMe.Lib/App.xaml
@@ -10,10 +10,10 @@
             <Color x:Key="syncBlack">#000000</Color>
         </ResourceDictionary>
         <Style x:Key="ToggleButtonStyle" TargetType="Switch">
-            <Setter Property="OnColor" Value="{StaticResource epamBlue}"/>
+            <Setter Property="OnColor" Value="{StaticResource syncBlue}"/>
             <Setter Property="Margin" Value="20,0,15,11"/>
             <Setter Property="IsToggled" Value="True"/>
-            <Setter Property="ThumbColor" Value="{StaticResource epamGrey}"/>
+            <Setter Property="ThumbColor" Value="{StaticResource syncGray}"/>
         </Style>
     </Application.Resources>
 </Application>
